# bUt-TaUrI-iS-lIgHtEr

./: .gitignore  CMakeLists.txt
src/: .btil.c.swp  Consent.glade  Consent.glade~  Wizard.glade  Wizard.glade~  btil.c
